Contrived Multiresolution Crash #65693

Closed
opened 2019-06-10 15:41:39 +02:00 by Philip Holzmann · 7 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: Nvidia GTX 750 Ti

Blender Version
Broken: blender-2.80.0-git.81b68f7279cd-windows64

Short description of error
By doing a sequence of uncommon steps, I can get Blender to crash on clicking Delete Higher in the Multiresolution Modifier.

Exact steps for others to reproduce the error
With the file:

MultiresolutionCrash.blend
Just click Delete Higher to crash.

Without the file:

  1. Start with a cube.
  2. Add the Multiresolution Modifier. Click Subdivide twice.
  3. Create a Linked Duplicate of the cube (Alt+D).
  4. Turn off the viewport display of the modifier in one of the cubes and enter Sculpt Mode.
  5. Turn on Dynamic Topology. Ignore the warning.
  6. Sculpt a little.
  7. Switch to Object Mode.
  8. Decrease the Preview subdivisions in the modifier by 1 and click Delete Higher to crash.
**System Information** Operating system: Windows 10 64 bit Graphics card: Nvidia GTX 750 Ti **Blender Version** Broken: blender-2.80.0-git.81b68f7279cd-windows64 **Short description of error** By doing a sequence of uncommon steps, I can get Blender to crash on clicking *Delete Higher* in the Multiresolution Modifier. **Exact steps for others to reproduce the error** With the file: --- [MultiresolutionCrash.blend](https://archive.blender.org/developer/F7097550/MultiresolutionCrash.blend) Just click *Delete Higher* to crash. Without the file: --- 1. Start with a cube. 2. Add the Multiresolution Modifier. Click *Subdivide* twice. 3. Create a *Linked Duplicate* of the cube (Alt+D). 4. Turn off the *viewport display of the modifier* in one of the cubes and enter *Sculpt Mode*. 5. Turn on *Dynamic Topology*. Ignore the warning. 6. Sculpt a little. 7. Switch to *Object Mode*. 8. Decrease the *Preview* subdivisions in the modifier by 1 and click *Delete Higher* to crash.

Added subscriber: @Foaly

Added subscriber: @Foaly

Added subscriber: @tomjk

Added subscriber: @tomjk

Can reproduce, crashes in latest master.

Operating system: Linux-4.15.0-48-generic-x86_64-with-debian-stretch-sid 64 Bits

Can reproduce, crashes in latest master. Operating system: Linux-4.15.0-48-generic-x86_64-with-debian-stretch-sid 64 Bits

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-06-17 14:07:30 +02:00

BT:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x0000555557d43b78 in copy_v3_v3 (r=0x7fffeae3a4c8, a=0x0) at /home/zed/prog/blender/source/blender/blenlib/intern/math_vector_inline.c:63
63	  r[0] = a[0];
(gdb) bt
- 0  0x0000555557d43b78 in copy_v3_v3 (r=0x7fffeae3a4c8, a=0x0) at /home/zed/prog/blender/source/blender/blenlib/intern/math_vector_inline.c:63
- 1  0x0000555557d457d2 in multires_copy_grid (gridA=0x7fffeae3a4c8, gridB=0x0, sizeA=2, sizeB=3)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/multires.c:551
#2  0x0000555557d45e71 in multires_del_higher (mmd=0x7fffd2f52748, ob=0x7fffcfd0a608, lvl=1)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/multires.c:640
#3  0x0000555557d460ae in multiresModifier_del_levels (mmd=0x7fffd2f52748, scene=0x7fffe67f2008, ob=0x7fffcfd0a608, direction=1)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/multires.c:687
#4  0x0000555558b1afe2 in multires_higher_levels_delete_exec (C=0x7fffeb891208, op=0x7fffe57f6948)
    at /home/zed/prog/blender/source/blender/editors/object/object_modifier.c:1291
#5  0x0000555558b1b076 in multires_higher_levels_delete_invoke (C=0x7fffeb891208, op=0x7fffe57f6948, UNUSED_event=0x7fffe55ddf88)
    at /home/zed/prog/blender/source/blender/editors/object/object_modifier.c:1306
#6  0x0000555558298150 in wm_operator_invoke (C=0x7fffeb891208, ot=0x7fffe654e368, event=0x7fffe55ddf88, properties=0x7fffffffd850, reports=0x0,
    poll_only=false, use_last_properties=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1440
#7  0x0000555558298a71 in wm_operator_call_internal (C=0x7fffeb891208, ot=0x7fffe654e368, properties=0x7fffffffd850, reports=0x0, context=0,
    poll_only=false, event=0x7fffe55ddf88) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1687
#8  0x0000555558298b2e in WM_operator_name_call_ptr (C=0x7fffeb891208, ot=0x7fffe654e368, context=0, properties=0x7fffffffd850)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1701
- 9  0x00005555588b58fb in ui_apply_but_funcs_after (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:806
- 10 0x00005555588cdd31 in ui_handler_region_menu (C=0x7fffeb891208, event=0x7fffcfdf5e08, UNUSED_userdata=0x7fffcfc2c188)
    at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:10144
#11 0x0000555558295ec8 in wm_handler_ui_call (C=0x7fffeb891208, handler=0x7fffd2f0f6e8, event=0x7fffcfdf5e08, always_pass=0)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:623
#12 0x000055555829b1b3 in wm_handlers_do_intern (C=0x7fffeb891208, event=0x7fffcfdf5e08, handlers=0x7fffcfc2d198)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2701
#13 0x000055555829bf88 in wm_handlers_do (C=0x7fffeb891208, event=0x7fffcfdf5e08, handlers=0x7fffcfc2d198)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2947
- 14 0x000055555829d15c in wm_event_do_handlers (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3316
- 15 0x000055555829059c in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:417
#16 0x0000555557beb8b9 in main (argc=1, argv=0x7fffffffdff8) at /home/zed/prog/blender/source/creator/creator.c:500
BT: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x0000555557d43b78 in copy_v3_v3 (r=0x7fffeae3a4c8, a=0x0) at /home/zed/prog/blender/source/blender/blenlib/intern/math_vector_inline.c:63 63 r[0] = a[0]; (gdb) bt - 0 0x0000555557d43b78 in copy_v3_v3 (r=0x7fffeae3a4c8, a=0x0) at /home/zed/prog/blender/source/blender/blenlib/intern/math_vector_inline.c:63 - 1 0x0000555557d457d2 in multires_copy_grid (gridA=0x7fffeae3a4c8, gridB=0x0, sizeA=2, sizeB=3) at /home/zed/prog/blender/source/blender/blenkernel/intern/multires.c:551 #2 0x0000555557d45e71 in multires_del_higher (mmd=0x7fffd2f52748, ob=0x7fffcfd0a608, lvl=1) at /home/zed/prog/blender/source/blender/blenkernel/intern/multires.c:640 #3 0x0000555557d460ae in multiresModifier_del_levels (mmd=0x7fffd2f52748, scene=0x7fffe67f2008, ob=0x7fffcfd0a608, direction=1) at /home/zed/prog/blender/source/blender/blenkernel/intern/multires.c:687 #4 0x0000555558b1afe2 in multires_higher_levels_delete_exec (C=0x7fffeb891208, op=0x7fffe57f6948) at /home/zed/prog/blender/source/blender/editors/object/object_modifier.c:1291 #5 0x0000555558b1b076 in multires_higher_levels_delete_invoke (C=0x7fffeb891208, op=0x7fffe57f6948, UNUSED_event=0x7fffe55ddf88) at /home/zed/prog/blender/source/blender/editors/object/object_modifier.c:1306 #6 0x0000555558298150 in wm_operator_invoke (C=0x7fffeb891208, ot=0x7fffe654e368, event=0x7fffe55ddf88, properties=0x7fffffffd850, reports=0x0, poll_only=false, use_last_properties=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1440 #7 0x0000555558298a71 in wm_operator_call_internal (C=0x7fffeb891208, ot=0x7fffe654e368, properties=0x7fffffffd850, reports=0x0, context=0, poll_only=false, event=0x7fffe55ddf88) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1687 #8 0x0000555558298b2e in WM_operator_name_call_ptr (C=0x7fffeb891208, ot=0x7fffe654e368, context=0, properties=0x7fffffffd850) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1701 - 9 0x00005555588b58fb in ui_apply_but_funcs_after (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:806 - 10 0x00005555588cdd31 in ui_handler_region_menu (C=0x7fffeb891208, event=0x7fffcfdf5e08, UNUSED_userdata=0x7fffcfc2c188) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:10144 #11 0x0000555558295ec8 in wm_handler_ui_call (C=0x7fffeb891208, handler=0x7fffd2f0f6e8, event=0x7fffcfdf5e08, always_pass=0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:623 #12 0x000055555829b1b3 in wm_handlers_do_intern (C=0x7fffeb891208, event=0x7fffcfdf5e08, handlers=0x7fffcfc2d198) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2701 #13 0x000055555829bf88 in wm_handlers_do (C=0x7fffeb891208, event=0x7fffcfdf5e08, handlers=0x7fffcfc2d198) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2947 - 14 0x000055555829d15c in wm_event_do_handlers (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3316 - 15 0x000055555829059c in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:417 #16 0x0000555557beb8b9 in main (argc=1, argv=0x7fffffffdff8) at /home/zed/prog/blender/source/creator/creator.c:500 ```

This issue was referenced by 729bd7ddd9

This issue was referenced by 729bd7ddd98d7bad98bb8479f4e03ed1536b20c8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65693
No description provided.