Fix T65693: Crash removing higher on special multires objects